# op-move

./: .cursorignore  .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  README.md  custom.mrb  docker-compose.yml  head.mrb  sui.mrb
api/: Cargo.toml
api/src/: json_utils.rs  jsonrpc.rs  method_name.rs  request.rs
api/src/methods/: block_number.rs  call.rs  chain_id.rs  estimate_gas.rs  fee_history.rs  forkchoice_updated.rs  gas_price.rs  get_balance.rs  get_block_by_hash.rs  get_block_by_number.rs  get_nonce.rs  get_payload.rs  get_proof.rs  get_transaction_by_hash.rs  get_transaction_receipt.rs  mod.rs  new_payload.rs  send_raw_transaction.rs
api/src/schema/: engine.rs  eth.rs  mod.rs
app/: Cargo.toml
app/src/: actor.rs  block_hash.rs  command.rs  dependency.rs  factory.rs  input.rs  lib.rs  mempool.rs  query.rs  queue.rs  tests.rs
blockchain/: Cargo.toml
blockchain/src/: in_memory.rs  lib.rs
blockchain/src/block/: gas.rs  hash.rs  in_memory.rs  mod.rs  read.rs  root.rs  write.rs
blockchain/src/payload/: in_memory.rs  read.rs
blockchain/src/receipt/: in_memory.rs  mod.rs  read.rs  write.rs
blockchain/src/state/: mod.rs  read.rs
blockchain/src/transaction/: in_memory.rs  mod.rs  read.rs  write.rs
custom/move-stdlib/: Cargo.toml
engine-api/: Cargo.toml
engine-api/src/: json_utils.rs  jsonrpc.rs  lib.rs  method_name.rs  request.rs
engine-api/src/methods/: block_number.rs  call.rs  chain_id.rs  estimate_gas.rs  fee_history.rs  forkchoice_updated.rs  get_balance.rs  get_block_by_hash.rs  get_block_by_number.rs  get_nonce.rs  get_payload.rs  get_proof.rs  get_transaction_receipt.rs  mod.rs  new_payload.rs  send_raw_transaction.rs
engine-api/src/schema/: engine.rs  eth.rs
engine-api/src/schema/eth/: block.rs  mod.rs  withdrawal.rs
evm-ext/: Cargo.toml
evm-ext/src/: events.rs  lib.rs  native_evm_context.rs  native_impl.rs  solidity_abi.rs  state_changes.rs  storage.rs  trie_types.rs  type_utils.rs
evm-ext/src/evm_native/: events.rs  mod.rs  native_evm_context.rs  native_impl.rs  solidity_abi.rs  state_changes.rs  type_utils.rs
evm-ext/src/state/: account.rs  block_hash.rs  mod.rs  storage.rs
execution/: Cargo.toml
execution/src/: canonical.rs  deposited.rs  eth_token.rs  execute.rs  gas.rs  layout.rs  lib.rs  nonces.rs  session_id.rs  simulate.rs  tag_validation.rs  transaction.rs
execution/src/tests/: counter.rs  data_type.rs  erc20.rs  evm_native.rs  framework.rs  gas_cost.rs  marketplace.rs  mod.rs  natives.rs  signer.rs  transaction.rs  transfer.rs  utils.rs
execution/src/tests/res/: bridged_tokens_test.json
genesis/: Cargo.toml  aptos.mrb
genesis-builder/: Cargo.toml  l2_erc20_template.hbs  l2_move_template.hbs
genesis-builder/framework/aptos-framework/sources/: fungible_asset_u256.move  primary_fungible_store_u256.move
genesis-builder/framework/erc20/: Move.toml
genesis-builder/framework/erc20-api/: Move.toml
genesis-builder/framework/erc20-api/sources/: erc20.move
genesis-builder/framework/erc20/sources/: $Reach.move  0xBTC.move  1INCH.move  AAVE.move  ABT.move  ACX.move  ADX.move  AIKEK.move  AJNA.move  AKIRA.move  ALI.move  ALT.move  AMKT.move  AMP.move  APT.move  APU.move  ARC.move  ARIA20.move  ARPA.move  ASI.move  ATH.move  AURA.move  AVC.move  AXGT.move  AZUR.move  BAL.move  (+324 more)
genesis-builder/framework/eth-token/: Move.toml
genesis-builder/framework/evm/: Move.toml
genesis-builder/framework/l2/: Move.toml
genesis-builder/framework/l2-cross-domain-messenger/: Move.toml
genesis-builder/src/: generate.rs  main.rs
genesis-image/: Cargo.toml  build.rs
genesis-image/src/: lib.rs
genesis/src/: bridged_tokens.rs  config.rs  framework.rs  l2_contracts.rs  lib.rs  serde.rs  vm.rs
genesis/src/genesis/: cache.rs  config.rs  framework.rs  l2_contracts.rs  mod.rs  serde.rs  vm.rs
moved/: Cargo.toml  aptos.mrb  sui.mrb
moved/src/: error.rs  genesis.rs  in_memory.rs  iter.rs  lib.rs  main.rs  merkle_tree.rs  move_execution.rs  mpt.rs  primitives.rs  state_actor.rs  storage.rs
moved/src/block/: gas.rs  hash.rs  in_memory.rs  mod.rs  read.rs  root.rs
moved/src/genesis/: cache.rs  config.rs  framework.rs  l2_contracts.rs  mod.rs
moved/src/methods/: forkchoice_updated.rs  get_payload.rs  mod.rs  new_payload.rs  send_raw_transaction.rs
moved/src/move_execution/: canonical.rs  deposited.rs  eth_token.rs  evm_native.rs  execute.rs  gas.rs  mod.rs  nonces.rs  session_id.rs  signers.rs  simulate.rs  state.rs  tag_validation.rs  tests.rs
moved/src/payload/: id.rs  in_memory.rs  mod.rs  read.rs
moved/src/receipt/: in_memory.rs  mod.rs  read.rs  write.rs
moved/src/state/: mod.rs  read.rs
moved/src/state_actor/: markle_root.rs  merkle_root.rs  payload.rs  queries.rs  tests.rs
moved/src/tests/: integration.rs  mod.rs
moved/src/transaction/: in_memory.rs  mod.rs  read.rs  write.rs
moved/src/types/: engine_api.rs  mirror.rs  mod.rs  queries.rs  session_id.rs  state.rs  transactions.rs
moved/tests/: integration.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
server/: Cargo.toml
server/benches/perf/: main.rs
server/src/: dependency.rs  geth_genesis.rs  lib.rs  main.rs  mirror.rs
server/src/dependency/: heed.rs  in_memory.rs  mod.rs  rocksdb.rs  shared.rs
server/src/tests/: config.sh  evm_contracts.rs  get_proof.rs  integration.rs  mod.rs  payload.rs  test_context.rs
shared/: Cargo.toml
shared/src/: error.rs  iter.rs  lib.rs  primitives.rs
state/: Cargo.toml
state/src/: lib.rs  nodes.rs
storage/: Cargo.toml
storage/heed/: Cargo.toml
storage/heed/src/: all.rs  block.rs  evm.rs  evm_storage_trie.rs  generic.rs  lib.rs  payload.rs  receipt.rs  state.rs  transaction.rs  trie.rs  trie2.rs
storage/rocksdb/: Cargo.toml
storage/rocksdb/src/: all.rs  block.rs  evm.rs  evm_storage_trie.rs  generic.rs  lib.rs  payload.rs  receipt.rs  state.rs  transaction.rs  trie.rs
storage/rocksdb/tests/: collision.rs  common.rs
storage/src/: all.rs  block.rs  generic.rs  lib.rs  payload.rs  receipt.rs  state.rs  transaction.rs  trie.rs
storage/tests/: collision.rs  common.rs
(+178 files in other folders)
