[package]
name = "op-move"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
alloy-consensus = { version = "0.1", features = ["k256"] }
alloy-primitives = { version = "0.7", features = ["k256", "rlp"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
bcs = { git = "https://github.com/aptos-labs/bcs" }
ethers-core = "2.0"
flate2 = "1"
hex = "0.4"
hyper = "0.14"
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-reverse-proxy = "1"

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[dev-dependencies]
alloy = { version = "0.1", features = ["full", "signer-keystore"] }
dotenvy = "0.15"
openssl = "0.10"
move-compiler = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
