[workspace]
resolver = "2"
members = [
    "engine-api",
    "genesis-builder",
    "moved",
    "server",
]

[workspace.package]
description = "Move VM execution layer for OP Stack"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.5", features = ["full", "rlp", "serde", "signer-keystore"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
anyhow = "1"
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-gas-meter = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-gas-schedule = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-table-natives = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-vm-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-jellyfish-merkle = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0", features = ["fuzzing"] }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
bcs = { git = "https://github.com/aptos-labs/bcs" }
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
flate2 = "1"
hex = "0.4"
hyper = "0.14"
jsonwebtoken = { version = "9", default-features = false }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-compiler = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-package = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
move-table-extension = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
moved = { path = "moved" }
moved-engine-api = { path = "engine-api" }
once_cell = "1.19"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sui-framework = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
test-case = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-reverse-proxy = "1"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-metrics-core = { git = "https://github.com/MovedNetwork/aptos-metrics-core.git" }
