[workspace]
resolver = "3"
members = [
    "api",
    "app",
    "blockchain",
    "evm-ext",
    "execution",
    "genesis",
    "genesis-builder",
    "genesis-image",
    "server",
    "shared",
    "state",
    "storage/rocksdb",
    "storage/heed",
    "trie",
]

[workspace.package]
description = "Move VM execution layer for OP Stack"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "0.13", features = ["full", "genesis", "getrandom", "rlp", "serde", "signer-keystore"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-trie = "0.7"
anyhow = "1"
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-gas-algebra = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-gas-meter = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-gas-schedule = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-native-interface = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-table-natives = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
aptos-vm-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
bcs = { git = "https://github.com/aptos-labs/bcs" }
better_any = "0.1.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.6"
dotenvy = "0.15"
eth_trie = "0.5.0"
flate2 = "1"
handlebars = "6.2"
heed = "0.21"
hex = "0.4"
hex-literal = "0.4"
hyper = "0.14"
jsonwebtoken = { version = "9", default-features = false }
lazy_static = "1.5"
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-compiler = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-package = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
move-table-extension = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
moved-api = { path = "api" }
moved-app = { path = "app" }
moved-blockchain = { path = "blockchain" }
moved-evm-ext = { path = "evm-ext" }
moved-execution = { path = "execution" }
moved-genesis = { path = "genesis" }
moved-genesis-image = { path = "genesis-image" }
moved-shared = { path = "shared" }
moved-state = { path = "state" }
moved-storage-rocksdb = { path = "storage/rocksdb" }
moved-storage-heed = { path = "storage/heed" }
moved-trie = { path = "trie" }
once_cell = "1.19"
op-alloy = { version = "0.12", features = ["full", "std", "k256", "serde"] }
openssl = "0.10"
regex = "1.11.1"
revm = { version = "21", features = ["optional_balance_check"] }
rocksdb = { version = "0.23" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
smallvec = "1"
sui-framework = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.28.3" }
test-case = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-reverse-proxy = "1"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-metrics-core = { git = "https://github.com/MovedNetwork/aptos-metrics-core.git" }
