[package]
name = "moved-api"
description = "Moved execution Ethereum JSON-RPC API"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
moved.workspace = true
moved-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
move-core-types.workspace = true
moved = { workspace = true, features = ["test-doubles"] }
moved-genesis.workspace = true
moved-genesis-image.workspace = true
moved-state.workspace = true
test-case.workspace = true
