[package]
description = "Moved execution Ethereum JSON-RPC API"
edition.workspace = true
name = "moved-api"
version.workspace = true

[dependencies]
alloy.workspace = true
moved-app.workspace = true
moved-blockchain.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
move-core-types.workspace = true
moved-app.features = ["test-doubles"]
moved-app.workspace = true
moved-evm-ext.features = ["test-doubles"]
moved-evm-ext.workspace = true
moved-blockchain.features = ["test-doubles"]
moved-blockchain.workspace = true
moved-genesis.workspace = true
moved-genesis-image.workspace = true
moved-state.workspace = true
test-case.workspace = true
