[package]
name = "moved-app"
description = "Moved application layer for orchestration logic"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
aptos-framework.workspace = true
aptos-gas-meter.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
aptos-vm.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
moved.workspace = true
moved-evm-ext.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
op-alloy.workspace = true
regex.workspace = true
revm.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
move-compiler.workspace = true
moved.features = ["test-doubles"]
moved.workspace = true
moved-genesis-image.workspace = true
test-case.workspace = true
