[package]
name = "moved-app"
description = "Moved application layer for orchestration logic"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = [
    "moved-blockchain/test-doubles",
    "moved-execution/test-doubles",
]

[dependencies]
alloy.workspace = true
alloy-trie.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
moved-blockchain.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
op-alloy.workspace = true
tokio.workspace = true
tokio-scoped.workspace = true

[dev-dependencies]
moved-execution.features = ["test-doubles"]
moved-execution.workspace = true
moved-blockchain.features = ["test-doubles"]
moved-blockchain.workspace = true
moved-genesis-image.workspace = true
test-case.workspace = true
