[package]
name = "moved-blockchain"
description = "Layer-2 Optimism specific blockchain"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
aptos-types.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
op-alloy.workspace = true
serde.workspace = true
sha2.workspace = true
evmap.workspace = true

[dev-dependencies]
moved-genesis-image.workspace = true
test-case.workspace = true
