[package]
name = "moved-engine-api"
description = "Moved execution Ethereum engine JSON-RPC API"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
moved.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
move-core-types.workspace = true
moved = { workspace = true, features = ["test-doubles"] }
test-case.workspace = true
