[package]
name = "moved-engine-api"
description = "Moved execution Ethereum engine JSON-RPC API"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
moved.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
moved-state = { path = "../state" }
moved-primitives = { path = "../primitives" }
moved-genesis = { path = "../genesis" }
moved-genesis-image = { path = "../genesis-image" }

[dev-dependencies]
move-core-types.workspace = true
moved = { workspace = true, features = ["test-doubles"] }
test-case.workspace = true
