[package]
name = "moved-evm-ext"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
aptos-gas-algebra.workspace = true
aptos-types.workspace = true
aptos-native-interface.workspace = true
bcs.workspace = true
better_any.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
revm.workspace = true
smallvec.workspace = true
moved-primitives = { path = "../primitives" }

[features]
default = []
test-doubles = []
