[package]
name = "moved-execution"
description = "Execution of smart contracts written in the Move language"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
aptos-framework.workspace = true
aptos-gas-algebra.workspace = true
aptos-gas-meter.workspace = true
aptos-gas-schedule.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
aptos-vm.workspace = true
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
moved-evm-ext.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
op-alloy.workspace = true
regex.workspace = true
revm.workspace = true
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
move-compiler.workspace = true
move-compiler-v2.workspace = true
move-model.workspace = true
moved-genesis-image.workspace = true
