[package]
name = "genesis-builder"
description = "Generate genesis snapshots"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aptos-framework.workspace = true
bcs.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-package.workspace = true
once_cell.workspace = true
sui-framework.workspace = true
sui-move-build.workspace = true
sui-types.workspace = true
