[package]
name = "genesis-builder"
description = "Generate genesis snapshots"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
aptos-framework.workspace = true
bcs.workspace = true
convert_case.workspace = true
handlebars.workspace = true
move-package.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-framework.workspace = true
sui-move-build.workspace = true
sui-types.workspace = true
