[package]
name = "moved-genesis-image"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-state = { path = "../state" }
moved-genesis = { path = "../genesis" }

[build-dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-state = { path = "../state" }
moved-genesis = { path = "../genesis" }

[features]
default = []
test-doubles = []
