[package]
name = "moved-genesis-image"
description = "Builds and embeds built image of genesis blockchain state into the binary for instanenious loading"
version.workspace = true
edition.workspace = true

[dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-state.workspace = true
moved-genesis.workspace = true

[build-dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-state.workspace = true
moved-genesis.workspace = true

[features]
default = []
test-doubles = []
