[package]
name = "moved-genesis-image"
description = "Builds and embeds an image of the genesis blockchain state into the binary for instantaneous loading"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-genesis.workspace = true
moved-state.workspace = true

[build-dependencies]
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-genesis.workspace = true
moved-state.workspace = true
