[package]
name = "moved-genesis"
description = "Defines the domain of genesis blockchain state"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
aptos-framework.workspace = true
aptos-gas-schedule.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
aptos-vm.workspace = true
aptos-vm-types.workspace = true
aptos-native-interface.workspace = true
bcs.workspace = true
bytes.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-framework.workspace = true
sui-types.workspace = true
moved-primitives.workspace = true
moved-evm-ext.workspace = true
moved-state.workspace = true

[features]
default = []
test-doubles = []
