[package]
name = "moved"
description = "Moved execution"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
aptos-framework.workspace = true
aptos-gas-meter.workspace = true
aptos-gas-schedule.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
aptos-vm.workspace = true
aptos-native-interface.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
op-alloy.workspace = true
regex.workspace = true
revm.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
moved-evm-ext = { path = "../evm-ext" }
moved-genesis = { path = "../genesis" }
moved-genesis-image = { path = "../genesis-image" }
moved-primitives = { path = "../primitives" }
moved-state = { path = "../state" }

[dev-dependencies]
anyhow.workspace = true
move-compiler.workspace = true
test-case.workspace = true

[features]
default = []
test-doubles = []
