[package]
name = "moved-primitives"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
move-core-types.workspace = true
op-alloy.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = []
test-doubles = []
