[package]
name = "moved-primitives"
description = "Defines the generic shared kernel of primitive types"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
move-core-types.workspace = true
op-alloy.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = []
test-doubles = []
