[package]
name = "moved-server"
description = "Moved execution HTTP server (using warp)"
version = "0.1.0"
edition = "2021"

[features]
default = []
storage = ["storage-lmdb"]
storage-lmdb = ["moved-storage-heed"]
storage-rocksdb = ["moved-storage-rocksdb"]

[dependencies]
anyhow.workspace = true
aptos-types.workspace = true
bcs.workspace = true
clap.workspace = true
flate2.workspace = true
hex.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
moved-api.workspace = true
moved-app.workspace = true
moved-blockchain.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
moved-storage-heed.optional = true
moved-storage-heed.workspace = true
moved-storage-rocksdb.optional = true
moved-storage-rocksdb.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp.workspace = true
warp-reverse-proxy.workspace = true

[dev-dependencies]
alloy.workspace = true
criterion.workspace = true
dotenvy.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-vm-runtime.workspace = true
moved-evm-ext.workspace = true
moved-genesis-image.workspace = true
openssl.workspace = true
tempfile.workspace = true

[[bin]]
name = "op-move"
path = "src/main.rs"

[[bench]]
name = "perf"
harness = false
