[package]
name = "moved-shared"
description = "Defines the minimal generic shared kernel"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
move-core-types.workspace = true
op-alloy.workspace = true

[dev-dependencies]
test-case.workspace = true
