[package]
name = "moved-shared"
description = "Defines the minimal generic shared kernel"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
op-alloy.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true
