[package]
name = "moved-state"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
aptos-types.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-test-utils.workspace = true
moved-evm-ext = { path = "../evm-ext" }
moved-primitives = { path = "../primitives" }

[features]
default = []
test-doubles = []
