[package]
name = "moved-state"
description = "Defines the domain of blockchain state"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
alloy.workspace = true
aptos-types.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
move-vm-test-utils.workspace = true
moved-evm-ext.workspace = true
moved-shared.workspace = true
