[package]
name = "moved-storage"
description = "Moved node integration with RocksDB persistent storage engine"
version.workspace = true
edition.workspace = true

[dependencies]
bcs.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved.workspace = true
moved-state = { path = "../state" }
moved-primitives = { path = "../primitives" }
rocksdb.workspace = true

[dev-dependencies]
hex-literal.workspace = true
