[package]
name = "moved-storage"
description = "Moved node integration with RocksDB persistent storage engine"
version.workspace = true
edition.workspace = true

[dependencies]
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hex-literal.workspace = true
