[package]
name = "aptos-move-stdlib"
version = "0.0.0"
edition = "2021"

[dependencies]
aptos-gas-schedule = { workspace = true }
aptos-native-interface = { workspace = true }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
move-vm-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.14.0" }
sha2 = "0.9.3"
sha3 = "0.9.1"
smallvec = "1.6.1"
