[package]
name = "moved-storage-heed"
description = "Moved node integration with LMDB persistent storage engine via Heed bindings"
version.workspace = true
edition.workspace = true

[dependencies]
eth_trie.workspace = true
heed.workspace = true
moved-blockchain.workspace = true
moved-shared.workspace = true
