[package]
name = "moved-storage-heed"
description = "Moved node integration with LMDB persistent storage engine via Heed bindings"
version.workspace = true
edition.workspace = true

[dependencies]
eth_trie.workspace = true
heed.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
moved-blockchain.workspace = true
moved-execution.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
serde.workspace = true
serde_json.workspace = true
