[package]
name = "moved-storage-heed"
description = "Moved node integration with LMDB persistent storage engine via Heed bindings"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
eth_trie.workspace = true
heed.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
moved-blockchain.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-genesis.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
moved-trie.workspace = true
serde.workspace = true
serde_json.workspace = true
