[package]
name = "moved-storage-rocksdb"
description = "Moved node integration with RocksDB persistent storage engine"
version.workspace = true
edition.workspace = true

[dependencies]
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
moved-blockchain.workspace = true
moved-evm-ext.workspace = true
moved-execution.workspace = true
moved-shared.workspace = true
moved-state.workspace = true
moved-trie.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy.workspace = true
hex-literal.workspace = true
op-alloy.workspace = true
